--- a/app/src/main/res/layout/activity_inbox_main.xml
+++ b/app/src/main/res/layout/activity_inbox_main.xml
@@ -25,7 +25,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tableView_inbox"
-        android:layout_width="407dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
